--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -3,7 +3,7 @@ button {
   background-color: var(--color3);
   background-image: var(--gradButton);
   border: none;
-  border-radius: var(--border-radius);
+  border-radius: var(--radius-all);
   color: var(--textButton);
   display: inline-block;
   font-weight: bold;
@@ -22,13 +22,16 @@ button:focus,
 button:hover {
   background-color: var(--color4);
 }
+.button:has(.window) .text {
+  margin: 0 var(--unit-1) 1em;
+}
 .button .window {
   background-color: var(--darkish);
-  border-radius: var(--border-radius);
+  border-radius: var(--radius-all);
   box-shadow: inset 0 0 0.5em var(--dark);
   color: var(--light);
   font-weight: normal;
-  margin: 1em var(--unit-1) 0;
+  margin: 0 var(--unit-1);
   overflow: scroll;
   padding: 4px 8px;
   text-shadow: 0 0 0.5em var(--lightish);
