--- a/src/css/showcase.css
+++ b/src/css/showcase.css
@@ -42,15 +42,20 @@
 }
 :is(.showcase, .collection) img {
   box-sizing: border-box;
-  margin-bottom: 1.5em;
+  display: block;
+  margin-bottom: 0;
+  max-width: 100%;
   width: 100%;
 }
-h3 + img {
+.showcase img {
+  border-radius: var(--radius-all);
+}
+/* h3 + img {
   padding-top: 50px;
-}
-h4 {
+} */
+/* h4 {
   padding-top: 0;
-}
+} */
 :is(.showcase, .collection) ul.skills {
   list-style: none;
   margin: 0 0 var(--unit4);
@@ -63,21 +68,32 @@ h4 {
 }
 :is(.showcase, .collection) a.button {
   align-self: center;
+  box-sizing: border-box;
   display: inline-block;
   font-weight: bold;
   margin-bottom: 0;
   margin-top: 0;
-  width: 80%;
+  width: 100%;
+}
+.collection a.button {
 }
 /* @media (max-width: 599px) { */
 :is(.showcase, .collection) ul.skills li {
   display: inline-block;
 }
 .collection .card {
-  background-color: var(--color2);
-  border-radius: var(--border-radius);
+  background-color: var(--color1);
   margin-bottom: var(--unit8);
-  padding: var(--unit2);
+  /* padding: var(--unit2) 0; */
+}
+/* .collection .card img + .button {
+  border-radius: var(--radius-bottom);
+} */
+.collection .card > *:first-child {
+  border-radius: var(--radius-top);
+}
+.collection .card > *:last-child {
+  border-radius: var(--radius-bottom);
 }
 /* } */
 @media (min-width: 600px) {
@@ -88,27 +104,34 @@ h4 {
     grid-template-columns: [sticky] 1fr [scroll] 1fr;
     grid-template-rows: [top] auto;
   }
-  :is(.showcase, .collection) * {
+  :is(.showcase, .collection) > * {
     grid-column: scroll;
   }
   .showcase img {
     grid-column: sticky;
     grid-row: top / span 4;
     margin-bottom: 0;
+    min-width: 0;
     position: sticky;
     top: 140px;
   }
   .collection .cards {
     grid-column: sticky;
     grid-row: top / span 4;
+    min-width: 0;
   }
   .collection .card {
     position: sticky;
-    top: 140px;
+    top: 120px;
   }
   .collection .about {
     position: sticky;
-    top: 140px;
+    top: 120px;
+  }
+  .card .button {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
   }
 }
 @media (min-width: 1200px) {
