--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -21,16 +21,17 @@
   right: -150px;
   bottom: -400px;
 } */
-/* .nav::before {
+.nav::before {
   box-sizing: border-box;
-  color: var(--color1);
+  color: transparent;
   content: "\25b6";
-  filter: blur(50px);
+  /* filter: blur(50px); */
   font-size: 540px;
   height: 0;
   overflow: hidden;
   padding: 200px 0 200px;
   pointer-events: none;
+  text-shadow: 0 0 60px var(--color1);
   transform: skewY(12deg);
   transform-origin: top left;
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
@@ -40,8 +41,8 @@
   position: absolute;
   left: -100px;
   top: -200px;
-} */
-.nav::before {
+}
+/* .nav::before {
   background-color: var(--color1);
   content: "";
   filter: blur(60px);
@@ -55,7 +56,7 @@
   transform-origin: bottom left;
   width: 300px;
   z-index: -1;
-}
+} */
 /* .nav::after {
   background-image: var(--gradNav);
   content: "";
