--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -25,14 +25,13 @@
   box-sizing: border-box;
   color: transparent;
   content: "\25b6";
-  /* filter: blur(50px); */
   font-size: 540px;
   height: 0;
   overflow: hidden;
   padding: 200px 0 200px;
   pointer-events: none;
   text-shadow: 0 0 60px var(--color1);
-  transform: skewY(12deg);
+  transform: scale(1, 1.5);
   transform-origin: top left;
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   width: calc(100vw + 100px);
@@ -40,12 +39,12 @@
 
   position: absolute;
   left: -100px;
-  top: -200px;
+  top: -300px;
 }
 /* .nav::before {
-  background-color: var(--color1);
+  background: none;
+  box-shadow: 0 0 60px var(--color1);
   content: "";
-  filter: blur(60px);
   height: 300px;
   left: -240px;
   overflow: hidden;
