--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -77,7 +77,7 @@
     --color4: #fd835e;
     --color5: #ffd8b7;
     --color6: #ffffff;
-    --glow: #ea303c; /* alpha was: .72 */
+    --glow: #ff3f4c;
     --knockout: #000000;
     --multiscreen: screen;
     --text: #ffffff;
