--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -11,7 +11,7 @@
   content: "";
   overflow: hidden;
   pointer-events: none;
-  rotate: -22deg;
+  transform: rotate(-22deg);
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   z-index: -1;
   
@@ -50,7 +50,7 @@
   overflow: hidden;
   pointer-events: none;
   position: absolute;
-  rotate: 45deg;
+  transform: rotate(45deg);
   top: -220px;
   transform-origin: bottom left;
   width: 300px;
@@ -61,7 +61,7 @@
   content: "";
   overflow: hidden;
   pointer-events: none;
-  rotate: -22deg;
+  transform: rotate(-22deg);
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   z-index: -1;
   
@@ -73,7 +73,7 @@
 } */
 .nav .group {
   height: 90px;
-  rotate: 22deg;
+  transform: rotate(22deg);
   transform-origin: top left;
   width: 170px;
 }
@@ -118,7 +118,7 @@
 }
 @media (max-width: 600px) {
   .nav .group {
-    rotate: 22deg;
+    transform: rotate(22deg);
   }
   .nav .toggle {
     display: block;
