--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -8,7 +8,7 @@
   --color4: #ea303c;
   --color5: #5a3a67;
   --color6: #121f26;
-  --glow: #ffd8b7;
+  --glow: #ffa698;
   --knockout: #ffffff;
   --multiscreen: multiply;
   --text: #121f26;
