--- a/src/css/global.css
+++ b/src/css/global.css
@@ -74,14 +74,14 @@ section.alignable p a[href*="http"]::before {
     0.33em -0.33em 0 currentColor, 0.3em -0.3em 0 currentColor;
   width: 1em;
 }
-section.alignable p a {
+section.alignable p a:not(.button) {
   border-bottom: 2px solid var(--color5);
   box-sizing: border-box;
   color: currentColor;
   text-decoration: none;
   transition: all ease 0.2s;
 }
-section.alignable p :is(a:focus, a:hover) {
+section.alignable p :is(a:focus, a:hover):not(.button) {
   border-bottom: 4px solid var(--color6);
 }
 .hero,
@@ -394,7 +394,6 @@ input:-webkit-autofill {
   padding: 0;
   transform: rotate(22deg);
   text-align: right;
-  /* text-shadow: 0 0 20em var(--glow), 0 0 40em var(--glow), 0 0 60em var(--glow), 0 0 80em var(--glow); */
   transform-origin: top right;
 
   position: absolute;
