--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -12,11 +12,12 @@
   margin-top: 140px;
   padding: 0 var(--unit8);
 }
-.layer {
+.gallery .layer {
   max-height: 100%;
 }
-.layer img {
+.gallery .layer img {
   max-height: 100%;
+  pointer-events: none;
 }
 @supports (perspective: 1px) {
   /* Parallax evnironment */
@@ -25,7 +26,7 @@
     transform-style: preserve-3d;
     transform: translateZ(0);
   }
-  .layer {
+  .gallery .layer {
     position: relative;
   }
   .l0 {
