--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -9,6 +9,7 @@ button {
   font-weight: bold;
   margin-bottom: 1rem;
   margin-top: 0;
+  overflow: hidden;
   padding: var(--unit2) var(--unit3);
 
   position: relative;
