--- a/src/css/global.css
+++ b/src/css/global.css
@@ -25,7 +25,7 @@ p {
 body {
   background: var(--color1);
   color: var(--color6);
-  font: 400 15px/1.3em Courier, monospace;
+  font: 400 16px/1.3em Courier, monospace;
   margin: 0;
   padding: 0;
   position: relative;
@@ -304,7 +304,7 @@ h2 {
 p,
 ul {
   letter-spacing: -0.6px;
-  line-height: 1.1rem;
+  /* line-height: 1.1rem; */
   margin-top: 0;
 }
 h2 + p::before {
@@ -313,7 +313,7 @@ h2 + p::before {
   display: block;
   float: right;
   height: 100px;
-  shape-outside: polygon(0% 0%, 100% 0%, 100% 100%);
+  shape-outside: polygon(16% 0%, 100% 0%, 100% 74%, 90% 74%);
   width: 250px;
 }
 section.alignable h2,
@@ -459,7 +459,7 @@ input:-webkit-autofill {
   width: 100%;
 }
 .columns-3 :is(h2, h3) {
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   padding-top: 0;
   position: static;
   translate: unset;
