--- a/src/css/global.css
+++ b/src/css/global.css
@@ -7,6 +7,8 @@
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
+  scrollbar-color: var(--color3) var(--scrolltrack);
+  scrollbar-width: thin;
 }
 p {
   margin-block-start: unset;
@@ -22,6 +24,17 @@ p {
   background: var(--color3);
   text-shadow: 0 0 10px var(--light);
 }
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-track-corner,
+::-webkit-resizer {
+  background-color: var(--scrolltrack);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--color3);
+}
 body {
   background: var(--color1);
   color: var(--color6);
@@ -29,6 +42,8 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  scrollbar-color: var(--color3) var(--color1);
+  scrollbar-width: 6px;
   width: 100vw;
   z-index: -10;
 }
