--- a/src/css/split.css
+++ b/src/css/split.css
@@ -16,8 +16,10 @@
 .half {
   box-sizing: border-box;
   display: flex;
-  font-size: calc(1.5vh + 1.2vw);
   position: relative;
+}
+.half p {
+  font-size: clamp(16px, calc(1.5vh + 1.2vw), 24px);
 }
 .half .cell {
   align-content: center;
