--- a/src/css/global.css
+++ b/src/css/global.css
@@ -25,6 +25,7 @@ p {
   text-shadow: 0 0 10px var(--light);
 }
 ::-webkit-scrollbar {
+  height: 4px;
   width: 4px;
 }
 ::-webkit-scrollbar-track,
@@ -89,14 +90,18 @@ section.alignable p a[href*="http"]::before {
     0.33em -0.33em 0 currentColor, 0.3em -0.3em 0 currentColor;
   width: 1em;
 }
-section.alignable p a:not(.button) {
+.text a,
+th a,
+td a {
   border-bottom: 2px solid var(--color5);
   box-sizing: border-box;
   color: currentColor;
   text-decoration: none;
   transition: all ease 0.2s;
 }
-section.alignable p :is(a:focus, a:hover):not(.button) {
+.text :is(a:focus, a:hover):not(.button),
+th :is(a:focus, a:hover),
+td :is(a:focus, a:hover) {
   border-bottom: 4px solid var(--color6);
 }
 .hero,
@@ -345,6 +350,18 @@ h4 {
   font-size: 20px;
   margin-bottom: 1rem;
 }
+sup {
+  top: -0.3em;
+  font-size: 66%;
+  position: relative;
+  vertical-align: baseline;
+}
+.small-text {
+  font-size: 0.8rem;
+  line-height: 1.2em;
+}
+.tight-text {
+}
 form {
   display: grid;
   gap: var(--unit4);
@@ -382,61 +399,6 @@ input:autofill {
 input:-webkit-autofill {
   background-color: var(--darkish);
 }
-.hero {
-  display: flex;
-  flex-direction: column;
-  height: 50vh;
-  position: relative;
-  width: 100vw;
-}
-.hero img {
-  height: 100%;
-  max-height: 100%;
-  max-width: 100%;
-  mix-blend-mode: overlay;
-  object-fit: cover;
-  object-position: center;
-  width: 100%;
-}
-.hero.imgB img {
-  object-position: bottom;
-}
-.hero.imgL img {
-  object-position: left;
-}
-.hero.imgR img {
-  object-position: right;
-}
-.hero.imgT img {
-  object-position: top;
-}
-.hero h1 {
-  align-self: end;
-  font-size: calc(6vh + 4vw);
-  max-width: calc(38vh + 24vw);
-  padding: 0;
-  transform: rotate(22deg);
-  text-align: right;
-  transform-origin: top right;
-
-  position: absolute;
-  right: 10px;
-  bottom: 0;
-}
-.hero h1::before {
-  background: var(--glow);
-  border-radius: 1em;
-  content: "";
-  display: block;
-  filter: blur(0.5em);
-  z-index: -1;
-
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  right: 10px;
-  bottom: -10px;
-}
 .self-center {
   align-self: center;
 }
@@ -454,6 +416,82 @@ input:-webkit-autofill {
 }
 .content-right {
   text-align: right;
+}
+tr.checkmarks td {
+  color: var(--color3);
+  font-size: 1.5em;
+  font-weight: 400;
+  padding: 0 2px;
+}
+th {
+  font-weight: 400;
+  padding: var(--unit1);
+  text-align: left;
+  vertical-align: top;
+}
+th[scope="col"] {
+  vertical-align: bottom;
+}
+th h4 {
+  margin: 0;
+  padding: 0;
+}
+th.compact {
+  height: 140px;
+  line-height: 1em;
+}
+td {
+  vertical-align: top;
+}
+td p.small-text {
+  margin: var(--unit2) var(--unit1) 0;
+}
+td .price,
+td .price-plus {
+  width: min-content;
+}
+@media (min-width: 481px) and (max-width: 700px) {
+  td {
+    text-align: center;
+  }
+  th.compact {
+    white-space: nowrap;
+  }
+  th.compact > div {
+    transform: rotate(-68deg);
+    width: 50px;
+  }
+  td .price {
+    transform: rotate(-68deg);
+    width: 0;
+  }
+  tr.stretch > * {
+    padding-top: 3em;
+  }
+}
+@media (max-width: 480px) {
+  tr.stretch > * {
+    padding-top: 4em;
+  }
+  th.compact {
+    white-space: nowrap;
+  }
+  th h4 {
+    display: inline;
+  }
+  th.compact > div {
+    transform: rotate(-90deg);
+    width: 0;
+  }
+  td .price {
+    transform: rotate(-90deg);
+    width: 0;
+  }
+}
+@media (min-width: 701px) {
+  th h4 {
+    width: 100px;
+  }
 }
 .columns-2 {
   display: flex;
