--- a/src/css/global.css
+++ b/src/css/global.css
@@ -343,6 +343,19 @@ h2.tilt {
   transform-origin: top right;
   translate: 0 80px;
 }
+section.alignable h2.standalone {
+  translate: 0;
+}
+section.alignable .compare h2 {
+  margin-bottom: 1em;
+  text-align: left;
+  transform: rotate(0deg);
+  transform-origin: top right;
+  translate: 0;
+}
+section.alignable .compare h2 + p::before {
+  content: none;
+}
 h3 {
   font-size: 22px;
 }
@@ -415,15 +428,25 @@ input:-webkit-autofill {
 .content-right {
   text-align: right;
 }
+table.compare {
+  border: 0;
+  border-collapse: collapse;
+  /* border-spacing: 0; */
+  max-width: calc(var(--max_text) + var(--unit16));
+  padding: 0 var(--unit8);
+  position: relative;
+  width: 100%;
+}
 tr.checkmarks td {
   color: var(--color3);
   font-size: 1.5em;
   font-weight: 400;
   padding: 0 2px;
+  position: relative;
 }
 th {
   font-weight: 400;
-  padding: var(--unit1);
+  padding: var(--unit1) var(--unit1) var(--unit1) 0;
   text-align: left;
   vertical-align: top;
 }
@@ -435,7 +458,7 @@ th h4 {
   padding: 0;
 }
 th.compact {
-  height: 140px;
+  height: 100px;
   line-height: 1em;
 }
 td {
@@ -448,31 +471,106 @@ td .price,
 td .price-plus {
   width: min-content;
 }
+table.compare .indicator-corner,
+table.compare .indicator-line {
+  position: relative;
+}
+table.compare .indicator-corner::before,
+table.compare .indicator-line::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: -2px;
+}
+table.compare .indicator-gradient {
+  position: relative;
+}
+table.compare .indicator-gradient::before {
+  background-image: linear-gradient(
+    90deg,
+    var(--color5),
+    var(--color4),
+    var(--color3)
+  );
+  content: "";
+  display: block;
+  height: 1px;
+
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  right: 0;
+}
+table.compare .indicator-corner::before {
+  border-right: 1px solid var(--color3);
+  border-bottom: 1px solid var(--color3);
+  border-radius: 0 0 var(--unit1) 0;
+
+  right: 50%;
+  bottom: 50%;
+}
+table.compare .indicator-line::before {
+  border-bottom: 1px solid var(--color3);
+
+  right: 0;
+  bottom: 0;
+}
+table.compare .indicator-corner ~ .indicator-line::before {
+  border-right: 1px solid var(--color3);
+  border-bottom: 0;
+
+  right: 50%;
+  bottom: 0;
+}
+table.compare .compare-cta {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+table.compare .compare-cta :nth-child(1) {
+  padding-right: var(--unit2);
+}
+table.compare .compare-cta :nth-last-child(1) {
+  flex-grow: 1;
+}
 @media (min-width: 481px) and (max-width: 700px) {
-  td {
+  tr.checkmarks td {
     text-align: center;
   }
   th.compact {
+    line-height: 0.7em;
     white-space: nowrap;
+    width: 3.4em;
+  }
+  th.compact .subtle {
+    font-size: 0.8em;
   }
   th.compact > div {
+    margin-bottom: var(--unit2);
     transform: rotate(-68deg);
     width: 50px;
   }
   td .price {
+    margin-top: 2em;
+    margin-bottom: 0;
     transform: rotate(-68deg);
     width: 0;
   }
-  tr.stretch > * {
-    padding-top: 3em;
+  table.compare .indicator-corner::before {
+    right: 75%;
+  }
+  table.compare .indicator-corner ~ .indicator-line::before {
+    right: 75%;
   }
 }
 @media (max-width: 480px) {
-  tr.stretch > * {
-    padding-top: 4em;
-  }
   th.compact {
+    /* padding-top: var(--unit8); */
     white-space: nowrap;
+  }
+  th.compact .subtle {
+    display: none;
   }
   th h4 {
     display: inline;
@@ -482,13 +580,27 @@ td .price-plus {
     width: 0;
   }
   td .price {
+    margin-bottom: 0;
+    margin-top: 3em;
     transform: rotate(-90deg);
     width: 0;
   }
+  tr.checkmarks td .price-plus {
+    width: auto;
+
+    position: absolute;
+    right: 0;
+  }
 }
 @media (min-width: 701px) {
-  th h4 {
+  th.compact h4 {
     width: 100px;
+  }
+  table.compare .indicator-corner::before {
+    right: 90%;
+  }
+  table.compare .indicator-corner ~ .indicator-line::before {
+    right: 90%;
   }
 }
 .columns-2 {
