--- a/src/css/global.css
+++ b/src/css/global.css
@@ -279,6 +279,7 @@ article,
   max-width: calc(var(--max_text) + var(--unit16));
   padding: 0 var(--unit8);
   position: relative;
+  overflow: hidden;
   width: 100%;
 }
 .in-the-corner {
@@ -344,10 +345,14 @@ h2 + p::before {
 }
 section.alignable h2,
 h2.tilt {
+  align-self: flex-end;
+  width: calc(100%);
   transform: rotate(22deg);
   text-align: right;
   transform-origin: top right;
-  translate: 0 80px;
+  translate: 36px 80px;
+  /* margin-right: -36px; */
+  max-width: 400px;
 }
 section.alignable h2.standalone {
   translate: 0;
