--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -52,6 +52,10 @@
   right: 10px;
   bottom: 0;
 }
+.hero.post h1 {
+  font-size: calc(5vh + 3vw);
+  max-width: calc(36vh + 22vw);
+}
 .hero h1::before {
   background: var(--glow);
   border-radius: 1em;
