--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -1,5 +1,6 @@
 /*  D E F A U L T   C O L O R S  */
 
+/* Light Mode Preferred (Default) */
 :root {
   --accent: #5a3a67;
   --color1: #ffffff;
@@ -69,6 +70,83 @@
 .hero_b {
   --gradBg: linear-gradient(70deg, #fff2cc, #ef5a64);
 }
+
+/* Dark Mode Selected */
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) {
+  --accent: #ffd8b7;
+  --color1: #121f26;
+  --color2: #5a3a67;
+  --color3: #ea3052;
+  --color4: #fd835e;
+  --color5: #ffd8b7;
+  --color6: #ffffff;
+  --glow: #ff3f4c;
+  --knockout: #000000;
+  --multiscreen: screen;
+  --text: #ffffff;
+  --textButton: #ffffff;
+  --gradBg: linear-gradient(70deg, #121f26 30%, #302a3f 80%, #692938 100%);
+  --gradButton: linear-gradient(70deg, #ea305266, #ffe9a24a);
+  --gradFooter: linear-gradient(48deg, #121f26, #312536);
+  --gradKnockout: linear-gradient(70deg, #ffffff00, #ffffff);
+  --gradNav: radial-gradient(
+    #121f26cc,
+    #121f26aa,
+    #121f2633,
+    #121f2611,
+    transparent 70%
+  );
+  --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
+  --scrolltrack: #121f26;
+  --lightish: #ffd8b7;
+  --tint1: #121f2666; /* alpha was: .4 */
+  --tint2: #5a3a6766; /* alpha was: .4 */
+  --tint3: #ea305266;
+  --tint4: #ea305266; /* alpha was: .4 */
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) .cta,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .cta_b::before {
+  --gradBg: linear-gradient(70deg, #ce2c3e, #ff936e);
+  /* --gradButton: linear-gradient(70deg, #fa6e86aa, #f9cea9aa); */
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half1,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half1_b::before {
+  --gradBg: linear-gradient(50deg, #121f26, #2e283b, #5d2942);
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half1,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half1_b {
+  --glow: #5a3a67;
+  --heading: #fc9f7d;
+  --text: #ffffff;
+  /* --gradText: -webkit-linear-gradient(70deg, #fea385, #ffd8b7); */
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half2,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half2_b::before {
+  --gradBg: linear-gradient(50deg, #fa7d65, #ffefb8);
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half2,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .half2_b {
+  --glow: #fea385;
+  --heading: #522a41;
+  --text: #121f26;
+  /* --gradText: -webkit-linear-gradient(70deg, #5a3a67, #121f26); */
+}
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) .hero,
+:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
+  .hero_b::before {
+  --gradBg: linear-gradient(70deg, #b22741, #dd7452);
+}
+
+/* Dark Mode Preferred */
 @media (prefers-color-scheme: dark) {
   :root {
     --accent: #ffd8b7;
@@ -132,5 +210,88 @@
   .hero,
   .hero_b::before {
     --gradBg: linear-gradient(70deg, #b22741, #dd7452);
+  }
+
+  /* Light Mode Selected */
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked) {
+    --accent: #5a3a67;
+    --color1: #ffffff;
+    --color2: #ffd8b7;
+    --color3: #ff653a;
+    --color4: #ea303c;
+    --color5: #5a3a67;
+    --color6: #121f26;
+    --glow: #ffa698;
+    --knockout: #ffffff;
+    --multiscreen: multiply;
+    --text: #121f26;
+    --textButton: #ffffff;
+    --tint1: #ffffff66;
+    --tint2: #ffcc9366;
+    --tint3: #ff653a66;
+    --tint4: #fe574a66;
+    /* Consistent colors */
+    --dark: #121f26;
+    --darkish: #29232e;
+    --light: #ffffff;
+    --lightish: #ffb8ad;
+    /* Gradients */
+    --gradBg: linear-gradient(70deg, #ffffff 30%, #fff6d8 80%, #ffbca9 100%);
+    --gradButton: linear-gradient(70deg, #ffe9a24a, #ea305266);
+    --gradFooter: linear-gradient(48deg, #ffffff, #ffd8b7);
+    --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
+    --gradKnockout: linear-gradient(70deg, #121f2700, #121f27);
+    --gradNav: radial-gradient(
+      #ffffffcc,
+      #ffffffaa,
+      #ffffff33,
+      #ffffff11,
+      transparent 70%
+    );
+    --scrolltrack: #121f26;
+    /* --gradText: -webkit-linear-gradient(90deg, #5a3a67, #121f26); */
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .cta,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .cta_b {
+    --gradBg: linear-gradient(70deg, #feeaa8, #fed29b, #ffa082, #ff3f55);
+    /* --gradButton: linear-gradient(70deg, #b13b6eaa, #563760aa); */
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half1,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half1_b::before {
+    --gradBg: linear-gradient(50deg, #feeaa8, #ffa082);
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half1,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half1_b {
+    --glow: #ffd8b7;
+    --heading: #4a3459;
+    --text: #121f26;
+    /* --gradText: -webkit-linear-gradient(70deg, #5a3a67, #121f26); */
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half2,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half2_b::before {
+    --gradBg: linear-gradient(50deg, #5a3a67, #121f26);
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half2,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .half2_b {
+    --glow: #48293f;
+    --heading: #ffb58d;
+    --text: #ffd8b7;
+    /* --gradText: -webkit-linear-gradient(70deg, #fea385, #ffd8b7); */
+  }
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .hero,
+  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
+    .hero_b {
+    --gradBg: linear-gradient(70deg, #fff2cc, #ef5a64);
   }
 }
