--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -18,7 +18,7 @@
   text-shadow: 0 0 140px var(--color1);
   transform: scale(1, 1.5);
   transform-origin: top left;
-  transition: all 1s cubic-bezier(0, 0, 0.15, 1);
+  /* transition: all 1s cubic-bezier(0, 0, 0.15, 1); */
   width: calc(100vw + 100px);
   z-index: -1;
 
