--- a/src/css/scheme.css
+++ b/src/css/scheme.css
@@ -1,14 +1,15 @@
 #color-scheme {
   border: 0;
+  box-sizing: content-box;
   /* display: inline-block; */
-  font-size: 2em;
-  margin: 0 0.25em -1.5em auto;
-  padding: 0;
+  font-size: 1.5em;
+  margin: 0 0 calc(-1.5em - 18px) auto;
+  padding: 18px var(--unit2) 0;
   position: sticky;
   right: 0;
-  top: 0;
+  top: -18px;
   text-align: right;
-  width: 4.75em;
+  width: 4.5em;
   z-index: 999;
 }
 #color-scheme input {
