--- a/src/css/heroHome.css
+++ b/src/css/heroHome.css
@@ -5,13 +5,14 @@
   float: left;
   height: 100vh;
   margin-right: -3vw;
-  transform: rotate(22deg);
+  transform: rotate(14.125deg);
   translate: 1vh 1vh;
   width: 50vh;
   z-index: 0;
 
   position: relative;
   top: 2vh;
+  left: -2.2vh;
 }
 @media screen and (orientation: portrait) {
   .heroClip {
@@ -122,7 +123,7 @@
     100% 52.07%,
     100% 73.5%,
     36.32% 73.5%,
-    95.61% 100%,
+    73% 100%,
     0% 100%
   );
   width: 18vh;
