--- a/src/css/units.css
+++ b/src/css/units.css
@@ -1,6 +1,7 @@
 :root {
   --compensate-full: 20.25vw;
   --compensate-half: 10.175vw;
+  --deg: 22px;
   --max_text: 600px;
   --radius-all: 4px;
   --radius-bottom: 0 0 4px 4px;
