--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -50,7 +50,6 @@
     text-align: right;
     transform: skewY(14.125deg);
     transform-origin: bottom right;
-    width: min-content;
   }
   &.page {
     background-image: var(--gradBgHero);
@@ -62,6 +61,9 @@
         filter: blur(0);
         transition: all 1.5s ease;
       }
+    }
+    & h1 {
+      width: min-content;
     }
     h1::before {
       background: var(--glow);
@@ -79,9 +81,6 @@
     }
   }
   &.post {
-    /* background-image: var(--gradBgHero);
-    background-repeat: no-repeat; */
-    /* background-color: var(--tint4); */
     & .hero__bg {
       mix-blend-mode: var(--multiscreen);
       transition: filter 1.5s ease;
@@ -94,6 +93,7 @@
     & h1 {
       font-size: calc(3vh + 4vw);
       transition: opacity 1.5s ease, filter 1.5s ease;
+      width: 50vw;
     }
     &:hover {
       & img {
