Fixed hero and CTA dark/light modes.

--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -25,6 +25,7 @@
   --lightish: #ffb8ad;
   /* Gradients */
   --gradBg: linear-gradient(70deg, #ffffff 30%, #fff6d8 80%, #ffbca9 100%);
+  --gradBgCTA: linear-gradient(70deg, #feeaa8, #fed29b, #ffa082, #ff3f55);
   --gradBgHero: linear-gradient(70deg, #fff2cc, #ef5a64);
   --gradButton: linear-gradient(70deg, #ffe9a24a, #ea305266);
   --gradFooter: linear-gradient(48deg, #ffffff, #ffd8b7);
@@ -39,11 +40,6 @@
   );
   --scrolltrack: #121f26;
   /* --gradText: -webkit-linear-gradient(90deg, #5a3a67, #121f26); */
-}
-.cta,
-.cta_b {
-  --gradBg: linear-gradient(70deg, #feeaa8, #fed29b, #ffa082, #ff3f55);
-  /* --gradButton: linear-gradient(70deg, #b13b6eaa, #563760aa); */
 }
 .half1,
 .half1_b::before {
@@ -83,6 +79,8 @@
   --text: #ffffff;
   --textButton: #ffffff;
   --gradBg: linear-gradient(70deg, #121f26 30%, #302a3f 80%, #692938 100%);
+  --gradBgCTA: linear-gradient(70deg, #ce2c3e, #ff936e);
+  --gradBgHero: linear-gradient(70deg, #b22741, #dd7452);
   --gradButton: linear-gradient(70deg, #ea305266, #ffe9a24a);
   --gradFooter: linear-gradient(48deg, #121f26, #312536);
   --gradKnockout: linear-gradient(70deg, #ffffff00, #ffffff);
@@ -100,12 +98,6 @@
   --tint2: #5a3a6766; /* alpha was: .4 */
   --tint3: #ea305266;
   --tint4: #ff653a66; /* alpha was: .4 */
-}
-:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) .cta,
-:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
-  .cta_b::before {
-  --gradBg: linear-gradient(70deg, #ce2c3e, #ff936e);
-  /* --gradButton: linear-gradient(70deg, #fa6e86aa, #f9cea9aa); */
 }
 :root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked)
   .half1,
@@ -137,9 +129,6 @@
   --text: #121f26;
   /* --gradText: -webkit-linear-gradient(70deg, #5a3a67, #121f26); */
 }
-:root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) {
-  --gradBgHero: linear-gradient(70deg, #b22741, #dd7452);
-}
 
 /* Dark Mode Preferred */
 @media (prefers-color-scheme: dark) {
@@ -157,6 +146,8 @@
     --text: #ffffff;
     --textButton: #ffffff;
     --gradBg: linear-gradient(70deg, #121f26 30%, #302a3f 80%, #692938 100%);
+    --gradBgCTA: linear-gradient(70deg, #ce2c3e, #ff936e);
+    --gradBgHero: linear-gradient(70deg, #b22741, #dd7452);
     --gradButton: linear-gradient(70deg, #ea305266, #ffe9a24a);
     --gradFooter: linear-gradient(48deg, #121f26, #312536);
     --gradKnockout: linear-gradient(70deg, #ffffff00, #ffffff);
@@ -174,11 +165,6 @@
     --tint2: #5a3a6766; /* alpha was: .4 */
     --tint3: #ea305266;
     --tint4: #ff653a66; /* alpha was: .4 */
-  }
-  .cta,
-  .cta_b::before {
-    --gradBg: linear-gradient(70deg, #ce2c3e, #ff936e);
-    /* --gradButton: linear-gradient(70deg, #fa6e86aa, #f9cea9aa); */
   }
   .half1,
   .half1_b::before {
@@ -201,9 +187,6 @@
     --heading: #522a41;
     --text: #121f26;
     /* --gradText: -webkit-linear-gradient(70deg, #5a3a67, #121f26); */
-  }
-  .hero {
-    --gradBgHero: linear-gradient(70deg, #b22741, #dd7452);
   }
 
   /* Light Mode Selected */
@@ -231,6 +214,8 @@
     --lightish: #ffb8ad;
     /* Gradients */
     --gradBg: linear-gradient(70deg, #ffffff 30%, #fff6d8 80%, #ffbca9 100%);
+    --gradBgCTA: linear-gradient(70deg, #feeaa8, #fed29b, #ffa082, #ff3f55);
+    --gradBgHero: linear-gradient(70deg, #fff2cc, #ef5a64);
     --gradButton: linear-gradient(70deg, #ffe9a24a, #ea305266);
     --gradFooter: linear-gradient(48deg, #ffffff, #ffd8b7);
     --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
@@ -244,13 +229,6 @@
     );
     --scrolltrack: #121f26;
     /* --gradText: -webkit-linear-gradient(90deg, #5a3a67, #121f26); */
-  }
-  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
-    .cta,
-  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
-    .cta_b {
-    --gradBg: linear-gradient(70deg, #feeaa8, #fed29b, #ffa082, #ff3f55);
-    /* --gradButton: linear-gradient(70deg, #b13b6eaa, #563760aa); */
   }
   :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked)
     .half1,
@@ -281,8 +259,5 @@
     --heading: #ffb58d;
     --text: #ffd8b7;
     /* --gradText: -webkit-linear-gradient(70deg, #fea385, #ffd8b7); */
-  }
-  :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked) {
-    --gradBgHero: linear-gradient(70deg, #fff2cc, #ef5a64);
   }
 }
