--- a/src/css/global.css
+++ b/src/css/global.css
@@ -549,7 +549,7 @@ table.compare .compare-cta > :nth-last-child(1) {
   flex-grow: 1;
 }
 table.compare .compare-cta h4 {
-  margin: 0;
+  margin: 0 0 0.25em;
   padding-top: 0;
 }
 @media (min-width: 481px) and (max-width: 700px) {
