Removed scroll-snap on html tag (too disruptive). Created .u-jump-lnk class to use in place of [id], so scroll-margin-top isn't applied to all ids automatically. Minor update to my crappy out-dated code-library (I really need to update that page).

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,7 +6,7 @@
 }
 html {
   scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
+  /* scroll-snap-type: y proximity; */
   scrollbar-color: var(--color3) var(--scrolltrack);
   scrollbar-width: thin;
 }
@@ -36,7 +36,7 @@ p {
 ::-webkit-scrollbar-thumb {
   background-color: var(--color3);
 }
-[id] {
+.u-jump-link {
   scroll-margin-top: 56px;
 }
 body {
